<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="F_VerifyTransportTubeStatuses" Id="{1541c929-edac-0f9d-296a-dec165f0fa68}" SpecialFunc="None">
    <Declaration><![CDATA[(* Verfiy that the state of the devices in the transport tube specified are in the expected state *)
FUNCTION F_VerifyTransportTubeStatuses : BOOL
VAR_INPUT
	stExpStatus : ST_TransportTubeStatuses;
	stStatusOp : ST_TransportTubeOps;
	eTransportTube : E_TransportTube;
	bEnforce : BOOL;
END_VAR
VAR
	stStatus : ST_TransportTubeStatuses;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stStatus := F_GetTransportTubeStatuses(eTransportTube);

IF bEnforce THEN
	// Try setting system states to the expected states
	F_SetTransportTubeStatuses(eTransportTube := eTransportTube, stExpStatus := stExpStatus, stStatusOp := stStatusOp);
END_IF

F_VerifyTransportTubeStatuses := (stExpStatus.bIonPumpOn = stStatus.bIonPumpOn OR stStatusOp.bIonPumpIgnore)
	AND (stExpStatus.bGateValveOpen = stStatus.bGateValveOpen OR stStatusOp.bGateValveIgnore)
	AND F_CompareGauge(eCompOp := stStatusOp.ePiraniOp, 
		fReading := stStatus.fPiraniVal, 
		eState := stStatus.ePiraniState, 
		fExpReading := stExpStatus.fPiraniVal, 
		eExpState := stExpStatus.ePiraniState)
	AND F_CompareGauge(eCompOp := stStatusOp.eColdCathodeOp, 
		fReading := stStatus.fColdCathodeVal, 
		eState := stStatus.eColdCathodeState,
		fExpReading := stExpStatus.fColdCathodeVal,
		eExpState := stExpStatus.eColdCathodeState);
]]></ST>
    </Implementation>
    <LineIds Name="F_VerifyTransportTubeStatuses">
      <LineId Id="95" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="51" Count="1" />
      <LineId Id="99" Count="3" />
      <LineId Id="53" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="106" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>